--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,59 @@
-# Setup
-title:            'State of Connecticut'
-tagline:          'Data Sharing Playbook'
-description:      'Connecticut Data Playbook'
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+#
+# If you need help with YAML syntax, here are some quick references for you:
+# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
+# https://learnxinyminutes.com/docs/yaml/
+#
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
 
+title: Connecticut Data Sharing Playbook
+description: Guidance on data sharing in Connecticut state government
+baseurl: "/data-sharing-playbook" # the subpath of your site, e.g. /blog
+url: ""https://ctopendata.github.io/data-sharing-playbook/"" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: jekyllrb
+github_username:  jekyll
+
+# Build settings
 remote_theme: pmarsceill/just-the-docs
 plugins:
   - jekyll-default-layout
-  
-author:
-  name:           'State of Connecticut'
-  url:            https://github.com/CTOpenData/data-sharing-playbook
 
-# Custom vars
-version:          1.2.0
+favicon_ico: "/assets/images/favicon.ico"
 
-github:
-  repo:           https://github.com/CTOpenData/data-sharing-playbook
+search_enabled: true
 
-# Google Analytics
-google_analytics: UA-56144207-2
+callouts:
+  note:
+    color: purple
+
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+# exclude:
+#   - .sass-cache/
+#   - .jekyll-cache/
+#   - gemfiles/
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules/
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
