--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ remote_theme: pmarsceill/just-the-docs
 plugins:
   - jekyll-default-layout
 
-favicon_ico: "/assets/images/favicon.ico"
+favicon_ico: "/assets/favicon.ico"
 
 search_enabled: true
 
