--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Connecticut Data Sharing Playbook
 description: Guidance on data sharing in Connecticut state government
 baseurl: "/data-sharing-playbook" # the subpath of your site, e.g. /blog
-url: "https://ctopendata.github.io/data-sharing-playbook/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://pzaldonis.github.io/data-sharing-playbook/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 remote_theme: pmarsceill/just-the-docs
