testing color scheme change

--- a/_config.yml
+++ b/_config.yml
@@ -35,9 +35,11 @@ favicon_ico: "/assets/favicon.ico"
 
 search_enabled: true
 
+color_scheme: brand_colors
+
 callouts:
   note:
-    color: purple
+    color: blue
 
 # Exclude from processing.
 # The following items will not be processed, by default.
